<resources>
    <string name="app_name">Garden</string>
    <string name="my_garden">APP JARDÍN</string>
    <string name="todo">TODO</string>
    <string name="todoQ">TODO</string>
    <string name="atodo">TODO</string>
    <string name="enciclopedia">ENCICLOPEDIA</string>
    <string name="mi_jard_n">MI JARDÍN</string>
    <string name="atr_s">ATRÁS</string>
    <string name="petunia">Petunia</string>
    <string name="violeta">Violeta</string>
    <string name="clavel">Clavel</string>
    <string name="orqu_dea">Orquídea</string>
    <string name="gladiolo">Gladiolo</string>
    <string name="dalia">Dalia</string>
    <string name="amapola">Amapola</string>
    <string name="tulip_n">Tulipán</string>
    <string name="geranio">Geranio</string>
    <string name="rosa">Rosa</string>
    <string name="gardenia">Gardenia</string>
    <string name="girasol">Girasol</string>
    <string name="todol">TODO</string>
    <string name="q">TODO</string>
    <string name="asdas">TODO</string>
    <string name="asdasds">TODO</string>
    <string name="qwqweq">TODO</string>
    <string name="qweqweqweqw">TODO</string>
    <string name="qeqweqeqw">TODO</string>
    <string name="qq">TODO</string>
    <string name="ee">TODO</string>
    <string name="ss">TODO</string>
    <string name="qa">TODO</string>
    <string name="eew">TODO</string>
    <string name="asaq">TODO</string>
    <string name="salir">SALIR</string>
    <string name="volver">Volver</string>
    <string name="a_ade">Añade</string>
</resources>