<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="501dp"
        android:layout_height="840dp"
        android:contentDescription="@string/atodo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bgmainactivity"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/enciclopedia"
        android:layout_width="207dp"
        android:layout_height="70dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/enciclopedia"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <Button
        android:id="@+id/jardin"
        android:layout_width="166dp"
        android:layout_height="63dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/mi_jard_n"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/enciclopedia"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/enciclopedia"
        app:layout_constraintTop_toBottomOf="@+id/enciclopedia"
        app:layout_constraintVertical_bias="0.17" />

    <Button
        android:id="@+id/salir"
        android:layout_width="96dp"
        android:layout_height="70dp"
        android:backgroundTint="#F44336"
        android:text="@string/salir"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jardin"
        app:layout_constraintVertical_bias="0.241" />
</androidx.constraintlayout.widget.ConstraintLayout>